--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,10 @@
 # Mono auto generated files
 mono_crash.*
 
+# Ignore all appsettings files
+appsettings.json
+appsettings.*.json
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
@@ -361,3 +365,4 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/CampusNet-AuthService.sln
